@@ -28,19 +28,26 @@ if (!isset($_SESSION['s_login']) || !eF_checkParameter($_SESSION['s_login'], 'lo
 
 try {
  $newTime = '';
+ $jsonValues = array();
  if ($_SESSION['s_login']) {
-  //$entity = getUserTimeTarget($_SERVER['HTTP_REFERER']);
-  $entity = $_SESSION['s_time_target'];
+  $entity = getUserTimeTarget($_GET['HTTP_REFERER']);
+  //$entity = $_SESSION['s_time_target'];
    //Update times for this entity
   $result = eF_executeNew("update user_times set time=time+(".time()."-timestamp_now),timestamp_now=".time()."
         where session_expired = 0 and session_custom_identifier = '".$_SESSION['s_custom_identifier']."' and users_LOGIN = '".$_SESSION['s_login']."'
          and entity = '".current($entity)."' and entity_id = '".key($entity)."'");
   if ($_SESSION['s_lesson_user_type'] == 'student' && isset($_POST['user_total_time_in_unit']) && current($entity) == 'unit' && eF_checkParameter(key($entity), 'id')) {
    $newTime = $_POST['user_total_time_in_unit'];
+   $jsonValues['entity'] = current($entity);
+   $jsonValues['entity_id'] = current($entity);
    if ($newTime && is_numeric($newTime)) {
-    debug();
+
+    //debug();
     $result = eF_executeNew("insert into users_to_content (users_LOGIN, content_ID, lessons_ID) values('".$_SESSION['s_login']."', ".key($entity).", ".$_SESSION['s_lessons_ID'].") on duplicate key update total_time=$newTime");
-    debug(false);
+    $jsonValues['time_in_unit'] = EfrontTimes::formatTimeForReporting($newTime);
+    //$jsonValues['time_in_lesson'] = EfrontTimes::formatTimeForReporting((EfrontLesson::getUserActiveTimeInLesson($_SESSION['s_login'], $_SESSION['s_lessons_ID'])));
+
+    //debug(false);
 /*				
 
 				$result = eF_executeNew("update user_times set time=$newTime,timestamp_now=".time()."
@@ -50,13 +57,17 @@ try {
 										and entity = '".current($entity)."' and entity_id = '".key($entity)."'");
 
 */
+   } else {
+    $jsonValues['old_time_in_unit'] = EfrontTimes::formatTimeForReporting((EfrontLesson::getUserActiveTimeInUnit($_SESSION['s_login'], key($entity))));
+    $jsonValues['old_time_in_lesson'] = EfrontTimes::formatTimeForReporting((EfrontLesson::getUserActiveTimeInLesson($_SESSION['s_login'], $_SESSION['s_lessons_ID'])));
    }
   }
  }
- $onlineUsers = EfrontUser :: getUsersOnline($GLOBALS['configuration']['autologout_time'] * 60);
+ $jsonValues['online'] = EfrontUser :: getUsersOnline($GLOBALS['configuration']['autologout_time'] * 60);
  $messages = eF_getTableData("f_personal_messages pm, f_folders ff", "count(*)", "pm.users_LOGIN='".$_SESSION['s_login']."' and viewed='no' and f_folders_ID=ff.id and ff.name='Incoming'");
- $messages = $messages[0]['count(*)'];
- echo json_encode(array("messages" => $messages, "online" => $onlineUsers, "status" => 1));
+ $jsonValues['messages'] = $messages[0]['count(*)'];
+ $jsonValues['status'] = 1;
+ echo json_encode($jsonValues);
 } catch (Exception $e) {
  handleAjaxExceptions($e);
 }
