@@ -212,10 +212,10 @@
   {/capture}
  {elseif $smarty.get.bare}
   {if !$T_SCORM}
-  <span style = "display:none" id = "user_total_time_in_unit">{$T_USER_TIME_IN_UNIT.total_seconds}</span>
+  <span style = "display:none" id = "user_total_time_in_unit">{*{$T_USER_TIME_IN_UNIT.total_seconds}*}</span>
   {*<span style = "display:none" id = "user_current_time_in_unit">{$T_USER_CURRENT_TIME_IN_UNIT}</span>*}
   <span style = "display:none" id = "required_time_in_unit">{$T_REQUIRED_TIME_IN_UNIT}</span>
-  <span style = "display:none" id = "user_time_in_lesson">{$T_USER_CURRENT_TIME_IN_LESSON}</span>
+  <span style = "display:none" id = "user_time_in_lesson">{*{$T_USER_CURRENT_TIME_IN_LESSON}*}</span>
   <span style = "display:none" id = "required_time_in_lesson">{$T_REQUIRED_TIME_IN_LESSON}</span>
   {/if}
   {if $T_SCORM}
@@ -224,10 +224,10 @@
   {$T_UNIT.data}
  {else}
   {if !$T_SCORM}
-  <span style = "display:none" id = "user_total_time_in_unit">{$T_USER_TIME_IN_UNIT.total_seconds}</span>
+  <span style = "display:none" id = "user_total_time_in_unit"></span>
   {*<span tyle = "display:none" id = "user_current_time_in_unit">{$T_USER_CURRENT_TIME_IN_UNIT}</span>*}
   <span style = "display:none" id = "required_time_in_unit">{$T_REQUIRED_TIME_IN_UNIT}</span>
-  <span style = "display:none" id = "user_time_in_lesson">{$T_USER_CURRENT_TIME_IN_LESSON}</span>
+  <span style = "display:none" id = "user_time_in_lesson"></span>
   <span style = "display:none" id = "required_time_in_lesson">{$T_REQUIRED_TIME_IN_LESSON}</span>
   {*Target: {foreach name = 'aaa' key = "key" item = "item" from = $smarty.session.s_time_target}{$item}-{$key}{/foreach}*}
 
@@ -388,15 +388,15 @@
     {if $T_SCORM && $T_NOCREDIT}
      <div><script>var nocredit = false</script>{$smarty.const._YOUAREREVISITINGCHANGESNOTTAKENINTOACCOUNT}</div>
     {/if}
-    <div {if !$T_CURRENT_LESSON->options.timers || $T_SCORM}style = "display:none"{/if}>{$smarty.const._TOTALTIMESPENTONTHISUNIT}:&nbsp;<span id = "user_time_in_unit_display">{$T_USER_TIME_IN_UNIT.time_string_colon}</span></div>
-    <div {if !$T_CURRENT_LESSON->options.timers || $T_SCORM}style = "display:none"{/if}>{$smarty.const._TOTALTIMESPENTONTHISLESSON}:&nbsp;<span id = "user_time_in_lesson_display">{$T_USER_TIME_IN_LESSON.time_string_colon}</span></div>
+    <div {if !$T_CURRENT_LESSON->options.timers || $T_SCORM}style = "display:none"{/if}>{$smarty.const._TOTALTIMESPENTONTHISUNIT}:&nbsp;<span id = "user_time_in_unit_display"></span></div>
+    <div {if !$T_CURRENT_LESSON->options.timers || $T_SCORM}style = "display:none"{/if}>{$smarty.const._TOTALTIMESPENTONTHISLESSON}:&nbsp;<span id = "user_time_in_lesson_display"></span></div>
     <script>
-    var seconds = {$T_USER_TIME_IN_UNIT.seconds};
-    var minutes = {$T_USER_TIME_IN_UNIT.minutes};
-    var hours = {$T_USER_TIME_IN_UNIT.hours};
-    var lesson_seconds = {$T_USER_TIME_IN_LESSON.seconds};
-    var lesson_minutes = {$T_USER_TIME_IN_LESSON.minutes};
-    var lesson_hours = {$T_USER_TIME_IN_LESSON.hours};
+    //var seconds = {$T_USER_TIME_IN_UNIT.seconds};
+    //var minutes = {$T_USER_TIME_IN_UNIT.minutes};
+    //var hours   = {$T_USER_TIME_IN_UNIT.hours};
+    //var lesson_seconds = {$T_USER_TIME_IN_LESSON.seconds};
+    //var lesson_minutes = {$T_USER_TIME_IN_LESSON.minutes};
+    //var lesson_hours   = {$T_USER_TIME_IN_LESSON.hours};
     {if $T_CONTAINS_FLASH}
     var start_timer = 'flash';
     {else}
