@@ -85,7 +85,7 @@
   {/if}
   </div>
  {/capture}
- {eF_template_printBlock title = $smarty.const._CURRICULUMPROPERTIES data = $smarty.capture.t_edit_curriculum_code image = '32x32/theory.png' help = 'Curriculums'}
+ {eF_template_printBlock title = $smarty.const._CURRICULUMPROPERTIES data = $smarty.capture.t_edit_curriculum_code image = '32x32/theory.png' help = 'Curriculum'}
 {else}
  {capture name = "t_curriculums_code"}
   {if !isset($T_CURRENT_USER->coreAccess.lessons) || $T_CURRENT_USER->coreAccess.lessons== 'change'}
@@ -129,5 +129,5 @@
 <!--/ajax:curriculumsTable-->
  {/capture}
 
- {eF_template_printBlock title = $smarty.const._CURRICULUMS data = $smarty.capture.t_curriculums_code image='32x32/theory.png' help = 'Curriculums'}
+ {eF_template_printBlock title = $smarty.const._CURRICULUMS data = $smarty.capture.t_curriculums_code image='32x32/theory.png' help = 'Curriculum'}
 {/if}
